UCF-APR2.4/ftr main/force-app/main/default/objects/Quota__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>NEMA</fullName>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>