UCF-APR2.4/ftr main/force-app/main/default/objects/Quota__c/fields/AvoidRepeating__c.field-meta.xml
<CustomField>
    <fullName>AvoidRepeating__c</fullName>
    <label>AvoidRepeating</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>