UCF-APR2.4/ftr main/force-app/main/default/objects/Quota__c/fields/Contract_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category__c</fullName>
    <label>Contract Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>