UCF-APR2.4/ftr main/force-app/main/default/objects/Quota__c/fields/FormulaToAvoidRepeating__c.field-meta.xml
<CustomField>
    <fullName>FormulaToAvoidRepeating__c</fullName>
    <formula>Sales_User__c +&quot;-&quot;+ TEXT(Month__c) +&quot;-&quot;+ TEXT(Contract_Category__c) +&quot;-&quot;+ TEXT(Agreement_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaToAvoidRepeating</label>
    <type>Text</type>
</CustomField>