UCF-APR2.4/ftr main/force-app/main/default/objects/Quota__c/fields/Sales_User_To_Insert__c.field-meta.xml
<CustomField>
    <fullName>Sales_User_To_Insert__c</fullName>
    <label>Sales User To Insert</label>
    <length>200</length>
    <type>Text</type>
</CustomField>